--- a/tailwind_theme/tailwind.css
+++ b/tailwind_theme/tailwind.css
@@ -492,9 +492,6 @@ video {
 .top-1{
   top: 0.25rem;
 }
-.bottom-0{
-  bottom: 0px;
-}
 .z-50{
   z-index: 50;
 }
@@ -557,10 +554,6 @@ video {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
 }
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
 .-mt-28{
   margin-top: -7rem;
 }
@@ -596,15 +589,6 @@ video {
 }
 .mt-6{
   margin-top: 1.5rem;
-}
-.mt-2{
-  margin-top: 0.5rem;
-}
-.ml-2{
-  margin-left: 0.5rem;
-}
-.mt-10{
-  margin-top: 2.5rem;
 }
 .block{
   display: block;
@@ -645,12 +629,6 @@ video {
 .h-96{
   height: 24rem;
 }
-.h-0{
-  height: 0px;
-}
-.h-6{
-  height: 1.5rem;
-}
 .w-10{
   width: 2.5rem;
 }
@@ -688,10 +666,6 @@ video {
   --tw-translate-y: -1rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.translate-y-12{
-  --tw-translate-y: 3rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .scale-125{
   --tw-scale-x: 1.25;
   --tw-scale-y: 1.25;
@@ -706,15 +680,8 @@ video {
   --tw-scale-y: .75;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.scale-y-50{
-  --tw-scale-y: .5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.cursor-pointer{
-  cursor: pointer;
 }
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -739,9 +706,6 @@ video {
 }
 .content-center{
   align-content: center;
-}
-.items-end{
-  align-items: flex-end;
 }
 .items-center{
   align-items: center;
@@ -795,12 +759,6 @@ video {
 .rounded-sm{
   border-radius: 0.125rem;
 }
-.rounded-xl{
-  border-radius: 0.75rem;
-}
-.rounded-md{
-  border-radius: 0.375rem;
-}
 .border-2{
   border-width: 2px;
 }
@@ -816,12 +774,6 @@ video {
 .border-t-4{
   border-top-width: 4px;
 }
-.border-b-2{
-  border-bottom-width: 2px;
-}
-.border-r-4{
-  border-right-width: 4px;
-}
 .border-solid{
   border-style: solid;
 }
@@ -833,13 +785,13 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
-.border-Mossco-grey-background{
-  --tw-border-opacity: 1;
-  border-color: rgb(33 33 33 / var(--tw-border-opacity));
-}
 .border-Mossco-grey-dark{
   --tw-border-opacity: 1;
   border-color: rgb(62 63 68 / var(--tw-border-opacity));
+}
+.border-Mossco-grey-background{
+  --tw-border-opacity: 1;
+  border-color: rgb(33 33 33 / var(--tw-border-opacity));
 }
 .bg-primary-NORMAL{
   --tw-bg-opacity: 1;
@@ -873,17 +825,14 @@ video {
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
 }
-.bg-opacity-75{
-  --tw-bg-opacity: 0.75;
-}
 .bg-opacity-95{
   --tw-bg-opacity: 0.95;
 }
-.bg-opacity-25{
-  --tw-bg-opacity: 0.25;
-}
 .bg-opacity-20{
   --tw-bg-opacity: 0.2;
+}
+.bg-opacity-75{
+  --tw-bg-opacity: 0.75;
 }
 .bg-cover{
   background-size: cover;
@@ -899,9 +848,6 @@ video {
 }
 .fill-primary-NORMAL{
   fill: #60aaa9;
-}
-.fill-current{
-  fill: currentColor;
 }
 .object-cover{
   -o-object-fit: cover;
@@ -970,10 +916,6 @@ video {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
 .pb-6{
   padding-bottom: 1.5rem;
 }
@@ -1019,15 +961,6 @@ video {
 .pl-4{
   padding-left: 1rem;
 }
-.pb-16{
-  padding-bottom: 4rem;
-}
-.pb-3{
-  padding-bottom: 0.75rem;
-}
-.pb-12{
-  padding-bottom: 3rem;
-}
 .pb-7{
   padding-bottom: 1.75rem;
 }
@@ -1070,10 +1003,6 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}
 .font-light{
   font-weight: 300;
 }
@@ -1085,21 +1014,6 @@ video {
 }
 .font-normal{
   font-weight: 400;
-}
-.font-thin{
-  font-weight: 100;
-}
-.font-extralight{
-  font-weight: 200;
-}
-.font-semibold{
-  font-weight: 600;
-}
-.font-extrabold{
-  font-weight: 800;
-}
-.font-black{
-  font-weight: 900;
 }
 .uppercase{
   text-transform: uppercase;
@@ -1140,17 +1054,13 @@ video {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
-.text-Mossco-grey-semi{
+.text-gray-800{
   --tw-text-opacity: 1;
-  color: rgb(195 195 195 / var(--tw-text-opacity));
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 .text-Mossco-grey-background{
   --tw-text-opacity: 1;
   color: rgb(33 33 33 / var(--tw-text-opacity));
-}
-.text-gray-800{
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 .opacity-60{
   opacity: 0.6;
@@ -1171,6 +1081,14 @@ video {
 }
 .drop-shadow-md{
   --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-2xl{
+  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-xl{
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .transition{
@@ -1290,9 +1208,7 @@ body, html {
   --tw-bg-opacity: 1;
   background-color: rgb(72 128 127 / var(--tw-bg-opacity));
 }
-@media (min-width: 640px){.sm\:col-span-1{
-    grid-column: span 1 / span 1;
-  }.sm\:hidden{
+@media (min-width: 640px){.sm\:hidden{
     display: none;
   }.sm\:h-28{
     height: 7rem;
@@ -1300,16 +1216,11 @@ body, html {
     width: 3rem;
   }.sm\:w-8{
     width: 2rem;
-  }.sm\:grid-cols-1{
-    grid-template-columns: repeat(1, minmax(0, 1fr));
   }.sm\:py-5{
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
   }.sm\:text-5xl{
     font-size: 3rem;
-    line-height: 1;
-  }.sm\:text-6xl{
-    font-size: 3.75rem;
     line-height: 1;
   }
 }
@@ -1334,9 +1245,6 @@ body, html {
   }.md\:mx-4{
     margin-left: 1rem;
     margin-right: 1rem;
-  }.md\:my-0{
-    margin-top: 0px;
-    margin-bottom: 0px;
   }.md\:mr-5{
     margin-right: 1.25rem;
   }.md\:mr-0{
@@ -1347,14 +1255,6 @@ body, html {
     margin-right: 0.5rem;
   }.md\:ml-2{
     margin-left: 0.5rem;
-  }.md\:mb-6{
-    margin-bottom: 1.5rem;
-  }.md\:mt-4{
-    margin-top: 1rem;
-  }.md\:mt-9{
-    margin-top: 2.25rem;
-  }.md\:mt-0{
-    margin-top: 0px;
   }.md\:inline-block{
     display: inline-block;
   }.md\:flex{
@@ -1363,8 +1263,6 @@ body, html {
     display: none;
   }.md\:h-40{
     height: 10rem;
-  }.md\:h-1\/5{
-    height: 20%;
   }.md\:w-56{
     width: 14rem;
   }.md\:w-2\/3{
@@ -1391,8 +1289,6 @@ body, html {
     justify-content: flex-end;
   }.md\:gap-2{
     gap: 0.5rem;
-  }.md\:gap-10{
-    gap: 2.5rem;
   }.md\:space-x-6 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
     margin-right: calc(1.5rem * var(--tw-space-x-reverse));
@@ -1409,9 +1305,6 @@ body, html {
   }.md\:py-6{
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
-  }.md\:py-8{
-    padding-top: 2rem;
-    padding-bottom: 2rem;
   }.md\:pb-0{
     padding-bottom: 0px;
   }.md\:pb-2{
@@ -1457,12 +1350,8 @@ body, html {
 }
 @media (min-width: 1024px){.lg\:top-2{
     top: 0.5rem;
-  }.lg\:col-span-2{
-    grid-column: span 2 / span 2;
   }.lg\:mb-10{
     margin-bottom: 2.5rem;
-  }.lg\:mt-9{
-    margin-top: 2.25rem;
   }.lg\:flex{
     display: flex;
   }.lg\:hidden{
@@ -1487,8 +1376,6 @@ body, html {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }.lg\:flex-row{
     flex-direction: row;
-  }.lg\:justify-center{
-    justify-content: center;
   }.lg\:gap-y-0{
     row-gap: 0px;
   }.lg\:space-x-4 > :not([hidden]) ~ :not([hidden]){
@@ -1507,8 +1394,6 @@ body, html {
   }.lg\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
-  }.lg\:pb-0{
-    padding-bottom: 0px;
   }.lg\:text-left{
     text-align: left;
   }.lg\:text-sm{
@@ -1520,8 +1405,6 @@ body, html {
   }.lg\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
-  }.lg\:font-medium{
-    font-weight: 500;
   }.lg\:text-primary-NORMAL{
     --tw-text-opacity: 1;
     color: rgb(96 170 169 / var(--tw-text-opacity));
@@ -1539,35 +1422,11 @@ body, html {
     height: 13rem;
   }.xl\:w-96{
     width: 24rem;
-  }.xl\:justify-center{
-    justify-content: center;
-  }.xl\:px-5{
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }.xl\:pb-14{
-    padding-bottom: 3.5rem;
-  }.xl\:pr-2{
-    padding-right: 0.5rem;
-  }.xl\:text-7xl{
-    font-size: 4.5rem;
-    line-height: 1;
   }
 }
 @media (min-width: 1536px){.\32xl\:mx-32{
     margin-left: 8rem;
     margin-right: 8rem;
-  }.\32xl\:justify-center{
-    justify-content: center;
-  }.\32xl\:bg-primary-NORMAL{
-    --tw-bg-opacity: 1;
-    background-color: rgb(96 170 169 / var(--tw-bg-opacity));
-  }.\32xl\:px-6{
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }.\32xl\:pb-12{
-    padding-bottom: 3rem;
-  }.\32xl\:pr-0{
-    padding-right: 0px;
   }.\32xl\:font-serif{
     font-family: 'Montserrat';
   }.\32xl\:text-7xl{
